--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -250,6 +250,7 @@
 .container {
   display: flex;
   width: 100%;
+  margin-top: 10%;
   padding: 4% 2%;
   box-sizing: border-box;
   height: 100vh;
@@ -313,7 +314,7 @@
 	align-items: center;
 	justify-content: center;
 	text-decoration: none;
-  background-image: url("../images/co-ordinatorbackgroundimage.jpg");
+  background-image: url("../images/amrita\ background.jpg");
   background-size: cover;
   background-attachment: fixed;
   position: relative;
